--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   <nav>
     leader is in charge
   </nav>
+  <main>
+    this is fresh man in charge
+    hello
+    I am a freshman2
+  </main>
 </body>
 </html>
